Fix : the dark theme black hole fix his position on mobile :bug:

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,7 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  *:not(.animate-spin, .transition-all, .transition-transform, .translate-*) {
+  *:not(.animate-spin, .transition-all, .transition-transform) {
     transition: border-color 0.5s ease, text-decoration-color 0.5s ease, fill 0.5s ease, stroke 0.5s ease, background-color 0.5s ease;
-    transform: translateZ(0);
   }
 }
